syntax = "proto3";

package services.rector;
option go_package = "github.com/galexrt/fivenet/proto/services/rector;rector";

import "resources/permissions/permissions.proto";
import "validate/validate.proto";

message GetRolesRequest {}

message GetRolesResponse {
  repeated resources.permissions.Role roles = 1;
}

message GetRoleRequest {
  uint64 id = 1;
}

message GetRoleResponse {
  resources.permissions.Role role = 1;
}

message CreateRoleRequest {
  string job = 1 [(validate.rules).string.max_len = 50];
  int32 grade = 2 [(validate.rules).int32.gt = 0];
}

message CreateRoleResponse {
  resources.permissions.Role role = 1;
}

message DeleteRoleRequest {
  uint64 id = 1;
}

message DeleteRoleResponse {}

message AddPermToRoleRequest {
  uint64 id = 1;
  repeated uint64 permissions = 2 [(validate.rules).repeated.min_items = 1];
}

message AddPermToRoleResponse {}

message RemovePermFromRoleRequest {
  uint64 id = 1;
  repeated uint64 permissions = 2 [(validate.rules).repeated.min_items = 1];
}

message RemovePermFromRoleResponse {}

message GetPermissionsRequest {
  string search = 1 [(validate.rules).string.max_len = 32];
}

message GetPermissionsResponse {
  repeated resources.permissions.Permission permissions = 1;
}

service RectorService {
  // @perm: description="Get/List FiveNet job roles"
  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse);
  // @perm: name=GetRoles
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);
  // @perm: description="Create rank-specific FiveNet job roles"
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse);
  // @perm: description="Delete FiveNet job roles"
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);

  // @perm: description="Add/ Delete permissions to FiveNet job roles"
  rpc AddPermToRole(AddPermToRoleRequest) returns (AddPermToRoleResponse);
  // @perm: name=AddPermToRole
  rpc RemovePermFromRole(RemovePermFromRoleRequest) returns (RemovePermFromRoleResponse);

  // @perm: PerJob=true;description="Get list of available FiveNet job roles permissions"
  rpc GetPermissions(GetPermissionsRequest) returns (GetPermissionsResponse);
}
